tests/baselines/reference/nodeModulesJson.errors.txt
/loosey.cts(1,36): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
/loosey.cts(6,9): error TS2339: Property 'default' does not exist on type '{ version: number; }'.
/main.mts(2,22): error TS1543: Importing a JSON file into an ECMAScript module requires a 'type: "json"' import attribute when 'module' is set to 'NodeNext'.
/main.mts(3,19): error TS1543: Importing a JSON file into an ECMAScript module requires a 'type: "json"' import attribute when 'module' is set to 'NodeNext'.
/main.mts(7,21): error TS1543: Importing a JSON file into an ECMAScript module requires a 'type: "json"' import attribute when 'module' is set to 'NodeNext'.
/main.mts(8,10): error TS1544: Named imports from a JSON file into an ECMAScript module are not allowed when 'module' is set to 'NodeNext'.
/main.mts(10,9): error TS2339: Property 'version' does not exist on type '{ default: { version: number; }; }'.


==== /node_modules/not.json/package.json (0 errors) ====
    {
      "name": "not.json",
      "version": "1.0.0",
      "type": "module",
      "exports": "./index.js"
    }
    
==== /node_modules/not.json/index.d.ts (0 errors) ====
    export function oops(json: string): any;
    
==== /node_modules/actually-json/package.json (0 errors) ====
    {
      "name": "actually-json",
      "version": "1.0.0",
      "type": "module",
      "exports": {
        ".": "./index.json",
        "./typed": "./typed.d.json.ts"
      }
    }
    
==== /node_modules/actually-json/index.json (0 errors) ====
    {}
    
==== /node_modules/actually-json/typed.d.json.ts (0 errors) ====
    declare const _default: {};
    export default _default;
    
==== /config.json (0 errors) ====
    {
      "version": 1
    }
    
==== /main.mts (5 errors) ====
    import { oops } from "not.json"; // Ok
    import moreOops from "actually-json"; // Error
                         ~~~~~~~~~~~~~~~
!!! error TS1543: Importing a JSON file into an ECMAScript module requires a 'type: "json"' import attribute when 'module' is set to 'NodeNext'.
    import typed from "actually-json/typed"; // Error
                      ~~~~~~~~~~~~~~~~~~~~~
!!! error TS1543: Importing a JSON file into an ECMAScript module requires a 'type: "json"' import attribute when 'module' is set to 'NodeNext'.
    
    import config from "./config.json" with { type: "json" }; // Ok
    import { default as config1 } from "./config.json" with { type: "json" }; // Ok
    import config2 from "./config.json"; // Error, no attribute
                        ~~~~~~~~~~~~~~~
!!! error TS1543: Importing a JSON file into an ECMAScript module requires a 'type: "json"' import attribute when 'module' is set to 'NodeNext'.
    import { version } from "./config.json" with { type: "json" }; // Error, named import
             ~~~~~~~
!!! error TS1544: Named imports from a JSON file into an ECMAScript module are not allowed when 'module' is set to 'NodeNext'.
    import * as config3 from "./config.json" with { type: "json" };
    config3.version; // Error
            ~~~~~~~
!!! error TS2339: Property 'version' does not exist on type '{ default: { version: number; }; }'.
    config3.default; // Ok
    
==== /loosey.cts (2 errors) ====
    import config from "./config.json" with { type: "json" }; // Error
                                       ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    import config2 from "./config.json"; // Ok
    import { version } from "./config.json"; // Ok
    import * as config3 from "./config.json";
    config3.version; // Ok
    config3.default; // Error
            ~~~~~~~
!!! error TS2339: Property 'default' does not exist on type '{ version: number; }'.
    